--- a/p04css-basic/style_nawrah.css
+++ b/p04css-basic/style_nawrah.css
@@ -1,4 +1,4 @@
-h2{
+h2 {
     text-align: center;
     font-weight: bold;
     font-family: 'Times New Roman', Times, serif;
@@ -7,28 +7,29 @@ h2{
 
 body{
     width: auto;
-    padding: 50px;
+    padding: 70px;
 }
 
-.kotak1, .kotak2, .kotak3{
+.bagian1, .bagian2, .bagian3{
     background-color: burlywood;
     border-radius: 4px;
 }
 
-.tombol{
+.tombol_kirim{
     width: 100%;
     height: 40px;
     padding: 5px 0;
     background-color: burlywood;
-    font-size: 20px;
+    font-size: 18px;
     color: black;
     border-radius: 50px;
+    
 }
 
-.daftar{
+.klik{
     width: 100%;
     height: 25px;
-    padding: 1px 0;
+    padding: 5px 0;
     background-color:white;
     border-radius: 5px;
     font-family: 'Times New Roman', Times, serif;
