--- a/p04css-responsive/style_nawrah.css
+++ b/p04css-responsive/style_nawrah.css
@@ -2,7 +2,7 @@ h2 {
     text-align: center;
     font-weight: bold;
     font-family: 'Times New Roman', Times, serif;
-	font-size: 25px;
+	font-size: 22px;
 }
 
 body{
@@ -36,6 +36,9 @@ body{
 .bagian1, .bagian2, .bagian3{
     background-color: papayawhip;
     border-radius: 4px;
+    padding: 5px 0;
+    width: 100%;
+    
 }
 
 .tombol_kirim{
@@ -51,14 +54,15 @@ body{
 
 .klik{
     width: 100%;
-    height: 25px;
+    height: 20px;
     padding: 5px 0;
     background-color:white;
     border-radius: 5px;
     font-family: 'Times New Roman', Times, serif;
 }
 
-img {
-	max-width: 100%;
-	height: auto;
+.boom {
+	width: 100%;
+    height: 40px;
+	padding: 5px 0;
 }
