--- a/p04css-responsive/style_nawrah.css
+++ b/p04css-responsive/style_nawrah.css
@@ -2,43 +2,26 @@ h2 {
     text-align: center;
     font-weight: bold;
     font-family: 'Times New Roman', Times, serif;
-	font-size: 22px;
+	font-size: 25px;
 }
 
 body{
     width: auto;
     padding: 70px;
-    background-color: peachpuff;
-}
-
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
-
-@media only screen and (max-width: 768px) {
-	[class*="col-"] {
-		width: 100%;
-	}
-	body {
-		background-color: lightcoral;
-	}
 }
 
 .bagian1, .bagian2, .bagian3{
-    background-color: papayawhip;
+    background-color: burlywood;
     border-radius: 4px;
-    padding: 5px 0;
-    width: 100%;
-    
+}
+.nana {
+    border-radius: 10px;
+    width: 80%;
+    display: flex;
+    justify-content:center;
+    margin: auto;
+    flex-direction: column;
+    padding: 5px;
 }
 
 .tombol_kirim{
@@ -54,15 +37,14 @@ body{
 
 .klik{
     width: 100%;
-    height: 20px;
+    height: 25px;
     padding: 5px 0;
     background-color:white;
     border-radius: 5px;
     font-family: 'Times New Roman', Times, serif;
 }
 
-.boom {
-	width: 100%;
-    height: 40px;
-	padding: 5px 0;
-}
+@media screen and (max-width:600px) {
+    .p { margin-right: 7.5%; 
+
+    }
